--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -6,7 +6,7 @@
     &__image-container{
         width: 100%;
         height: 300px;
-        background-image: url('../images/image-product-1.jpg');
+        background-image: url('./images/image-product-1.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position-y: -35px;
