--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ body {
 .gallery__image-container {
   width: 100%;
   height: 300px;
-  background-image: url("../images/image-product-1.jpg");
+  background-image: url("./images/image-product-1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position-y: -35px;
@@ -494,12 +494,12 @@ body {
 }
 .modal-gallery__close:hover {
   cursor: pointer;
-  content: url("../images/icon-close-orange.svg");
+  content: url("./images/icon-close-orange.svg");
 }
 .modal-gallery__image-container {
   width: 100%;
   height: 300px;
-  background-image: url("../images/image-product-1.jpg");
+  background-image: url("./images/image-product-1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position-y: -35px;
